--- a/index.html
+++ b/index.html
@@ -1,3 +1,20 @@
+<!doctype html>
+<html>
+<head>
+  <title>meechooの紹介</title>
+</head>
+<style>
+.lh-30 {
+    line-height: 30px;
+}
+
+.title {
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 30px;
+}
+</style>  
+<Body>
 <div class="sns-box mt-0">
                     <div class="title m-0 f-weight-bold family-gothic lh-30">meechoo（ミーチュ）は、<br>“贈る”をもっと楽しくします。</div>
                     <div class="form-group mt-20">
@@ -84,3 +101,5 @@
                         <h4 class="mt-20 lh-30"><b>プレゼントが決まったら、リンク先から購入しよう！</b></h4>
                     </div>
                 </div>
+</body>
+</html>
