--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
 .lh-30 {
     line-height: 30px;
 }
-
+  
+.sns-box {
+    background: #fff;
+    text-align: center;
+    width: 80%;
+    display: inline-block;
+    border-radius: 10px;
+    margin: 10px;
+    box-shadow: 0 0 10px #cccccc;
+    padding: 30px;
+}
+  
 .title {
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 30px;
 }
 </style>  
-<Body>
+<Body style="background-color: #282828;">
 <div class="sns-box mt-0">
                     <div class="title m-0 f-weight-bold family-gothic lh-30">meechoo（ミーチュ）は、<br>“贈る”をもっと楽しくします。</div>
                     <div class="form-group mt-20">
