--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!doctype html>
-<html>
-<head>
-  <title>meechooの紹介</title>
-</head>
 <style>
+body {
+  background-color: #282828;"
+  }
+  
 .lh-30 {
     line-height: 30px;
 }
@@ -24,8 +23,11 @@
     font-weight: bold;
     margin-bottom: 30px;
 }
-</style>  
-<Body style="background-color: #282828;">
+</style> 
+<head>
+  <title>meechooの紹介</title>
+</head>  
+<Body>
 <div class="sns-box mt-0">
                     <div class="title m-0 f-weight-bold family-gothic lh-30">meechoo（ミーチュ）は、<br>“贈る”をもっと楽しくします。</div>
                     <div class="form-group mt-20">
@@ -113,4 +115,3 @@
                     </div>
                 </div>
 </body>
-</html>
