--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@ body {
     background: #fff;
     text-align: center;
     width: 80%;
-    display: inline-block;
     border-radius: 10px;
-    margin: 10px;
-    box-shadow: 0 0 10px #cccccc;
+    margin: 10px auto;
     padding: 30px;
 }
   
@@ -24,9 +22,11 @@ body {
     margin-bottom: 30px;
 }
 </style> 
+
 <head>
   <title>meechooの紹介</title>
 </head>  
+
 <Body>
 <div class="sns-box mt-0">
                     <div class="title m-0 f-weight-bold family-gothic lh-30">meechoo（ミーチュ）は、<br>“贈る”をもっと楽しくします。</div>
