--- a/twitter.html
+++ b/twitter.html
@@ -1,5 +1,7 @@
 <style>
- boday {
- background-color:twitter2.jpg;
- }
+ body {
+  background-color: #282828;
+  }
 <style>
+ 
+<img src="/twitter2.jpg;">
