--- a/twitter.html
+++ b/twitter.html
@@ -3,5 +3,13 @@
   background-color: #282828;
   }
 <style>
+<head>
+ <title>Twitter APIの使用用途について</title>
+</head>
+<body>
  
-<img src="/meechoodesc/twitter2.jpg">
+<h1>Twitter APIの使用用途について</h1> 
+<div class="imgc">
+ <img src="/meechoodesc/twitter2.jpg">
+</div>
+</body>
