--- a/index.html
+++ b/index.html
@@ -21,6 +21,28 @@ body {
     font-weight: bold;
     margin-bottom: 30px;
 }
+  
+.menu {
+    margin: 20px 0;
+    text-align: center;
+}
+
+.submenu {
+    color: #fff;
+    display: inline-block;
+    margin: 0 20px;
+    font-size: 20px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    width: 250px;
+    padding: 6px 0;
+}
+
+.submenu:hover {
+    background-color: #fff;
+    color: #282828;
+}
+  
 </style> 
 
 <head>
@@ -28,6 +50,11 @@ body {
 </head>  
 
 <Body>
+<div class="menu">
+    <a href="https://meechoo2.github.io/meechoodesc/"><div class="submenu">サービス紹介</div></a>
+    <a href="https://meechoo2.github.io/meechoodesc/twitter.html"><div class="submenu">Twitter APIの用途</div></a>
+</div>  
+  
 <div class="sns-box mt-0">
                     <div class="title m-0 f-weight-bold family-gothic lh-30">meechoo（ミーチュ）は、<br>“贈る”をもっと楽しくします。</div>
                     <div class="form-group mt-20">
