--- a/twitter.html
+++ b/twitter.html
@@ -2,14 +2,17 @@
  body {
   background-color: #282828;
   }
-<style>
+</style>
+
 <head>
  <title>Twitter APIの使用用途について</title>
 </head>
+
 <body>
  
 <h1>Twitter APIの使用用途について</h1> 
 <div class="imgc">
  <img src="/meechoodesc/twitter2.jpg">
 </div>
+ 
 </body>
