--- a/twitter.html
+++ b/twitter.html
@@ -1,14 +1,38 @@
 <style>
- body {
+body {
   background-color: #282828;
-  }
+ }
+ 
+.menu {
+    margin: 20px 0;
+    text-align: center;
+}
+.submenu {
+    color: #fff;
+    display: inline-block;
+    margin: 0 20px;
+    font-size: 20px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    width: 250px;
+    padding: 6px 0;
+}
+.submenu:hover {
+    background-color: #fff;
+    color: #282828;
+}
 </style>
 
 <head>
  <title>Twitter APIの使用用途について</title>
 </head>
-
+ 
 <body>
+ 
+<div class="menu">
+    <a href="https://meechoo2.github.io/meechoodesc/"><div class="submenu">サービス紹介</div></a>
+    <a href="https://meechoo2.github.io/meechoodesc/twitter.html"><div class="submenu">Twitter APIの用途</div></a>
+</div>  
  
 <h1>Twitter APIの使用用途について</h1> 
 <div class="imgc">
