--- a/twitter.html
+++ b/twitter.html
@@ -21,6 +21,19 @@ body {
     background-color: #fff;
     color: #282828;
 }
+  
+.imgc {
+    text-align: center;
+}
+  
+h1 {
+    color: #d6d6d6;
+    text-align: center;
+    margin-top: 30px;
+    text-align: center;
+    font-size: 32px;
+}
+  
 </style>
 
 <head>
