--- a/lp/index.html
+++ b/lp/index.html
@@ -1,7 +1,5 @@
 <style>
 .container {
-  width: 1024px;
-  margin: 100px;
   background-image: url(https://meechoo.polycano.tech/images//bg.png);
   }
 
@@ -81,7 +79,7 @@
   line-height: 3;
   color: #fff;
   height: 50px;
-  border: 1px solid black;
+  border: 1px solid #000;
   background-color:#000;
   }
 
@@ -96,7 +94,7 @@
 }
 </style>
 
-<head>meechoo landing page</head>
+<head><title>meechoo landing page</title></head>
 
 <body>
 <div class="container">
@@ -114,7 +112,7 @@
 </div>
 
 <div class="banner">
-    <img src="https://cdn-ap-ec.yottaa.net/5717c375312e5835ae000dc4/shop.crayola.com/v~4b.35/dw/image/v2/AALB_PRD/on/demandware.static/-/Sites-crayola-storefront/default/dw5d655b7f/images/category_headers/giftSets_1920x716.jpg?sw=1920&sh=716&yocs=m_&yoloc=ap" width="1024px">
+    <img src="https://cdn-ap-ec.yottaa.net/5717c375312e5835ae000dc4/shop.crayola.com/v~4b.35/dw/image/v2/AALB_PRD/on/demandware.static/-/Sites-crayola-storefront/default/dw5d655b7f/images/category_headers/giftSets_1920x716.jpg?sw=1920&sh=716&yocs=m_&yoloc=ap" width="100%">
 </div>
 
 <div class="bannerLogo">
