--- a/lp/index.html
+++ b/lp/index.html
@@ -64,14 +64,14 @@
   }
   
 .sns-box {
-    background:#fff;
+    background: #fff;
     text-align: center;
     width: 80%;
     display: inline-block;
     border-radius: 10px;
-    margin: -200px 0 20px 75px;
+    margin: -200px 10% 20px 8%;
     box-shadow: 0 0 10px #cccccc;
-    padding: 30px;
+    padding: 20px;
 }
 
 .footer {
